--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngcli-task-runner",
+  "description":"ngcli task and build runner using broccoli",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +16,14 @@
     "lineup": "0.0.7",
     "ncp": "^1.0.1",
     "rimraf": "^2.2.8"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ngCli/ngcli-task-runner.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ngCli/ngcli-task-runner/issues"
+  },
+  "homepage": "https://github.com/ngCli/ngcli-task-runner"
 }
