--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngcli-task-runner",
   "description": "ngcli task and build runner using broccoli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +18,7 @@
     "ncp": "^1.0.1",
     "rimraf": "^2.2.8"
   },
+  "keywords": "ngcli,broccoli",
   "devDependencies": {},
   "repository": {
     "type": "git",
